--- a/coding-exercises/Exercise3/index.html
+++ b/coding-exercises/Exercise3/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title> Adrien - Ex-3</title>
     <link rel="stylesheet" href="style.css">
-    <script src="d3.v3.min.js"></script>
+    <script src="https://d3js.org/d3.v6.min.js"></script>
 </head>
 <body>
 <div id="topText">
