--- a/coding-exercises/Exercise3/index.html
+++ b/coding-exercises/Exercise3/index.html
@@ -9,7 +9,7 @@
 <body>
 <div id="topText">
     <h1 > Adrien's Assignment 3:</h1>
-    <h2>Music Vizz </h2>
+    <h2>Earworm Library (Ongoing!) </h2>
 </div>
 <div id="container-div">
     <div id="days">
