--- a/projects/placeholder/Datazine/datazine-template/back.html
+++ b/projects/placeholder/Datazine/datazine-template/back.html
@@ -21,6 +21,6 @@
 
     </div>
 
-    <script type="text/javascript" src="backScript.js"></script>
+    <script type="text/javascript" src="scripts/backScript.js"></script>
   </body>
 </html>
