--- a/projects/placeholder/Data-Story/index.html
+++ b/projects/placeholder/Data-Story/index.html
@@ -3,36 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <title>Meteorite Hunters</title>
+    <script src="https://d3js.org/d3.v6.min.js"></script>
 </head>
 <body style="text-align: center; background-color: black; color: #F2E0D5">
     <h1 id="intro"> Welcome to the Meteorite Hunter training program! </h1>
     <div style="text-align: right; width: 75%">
-        <img src="chase.gif" width="900"/>
-        <p>Image credits: Kōichirō Itō; Katsuhiro Takei, <i>Your Name</i>, 2016 </p>
+        <img src="images/chase.gif" width="900"/>
+        <p id="creds">Image credits: Kōichirō Itō; Katsuhiro Takei, <i>Your Name</i>, 2016 </p>
     </div>
 
     <p> So, you've decided to track down space rocks and sell them for a living eh? </p>
     <p> Well this website is going to equip you with the basic tools and knowledge you need to start finding, and trading meteorites for cold, hard cash! </p>
 
     <h1 id="industry"> The Industry </h1>
-        <h3> Overview </h3>
-            <p> History of meteorite selling and facts about the current state of the industry</p>
-        <h3> The World's Meteorite Hubs </h3>
-            <img src="hubs.jpg" width="900">
-            <p> rectangular projection showing the important trading places, finds the closest hub to your location</p>
-    <h1 id="people"> The People </h1>
-        <img src="profiles.jpg" width="900">
-        <p> Profiles of meteorite hunters, collectioners and scientists (forece graph + tooltip)</p>
+    <h3> Overview </h3>
+    <p> History of meteorite selling and facts about the current state of the industry</p>
+    <h3> The World's Meteorite Hubs </h3>
+    <div id="hubs">
+
+    </div>
     <h1 id="meteorites"> The Product </h1>
-        <h3> Meteorites are like opinions: </h3>
-            <p> Explanation of what makes a meteorite valuable or not (text) </p>
-            <img src="priciest.jpg" width="900">
-            <p> Ten highest selling meteorites (Bubble graph)</p>
-        <h3> Fantastic Rocks and where to find them </h3>
-            <p> General guidelines for finding meteorites in a safe and legal manner </p>
-            <img src="locator.jpg" width="900">
-            <p> Notable meteorite fields according to the data (rotating globe) </p>
-            <p> Tool identifying the closest high-selling meteorite to a chosen location and showing where similar meteorites were be found. </p>
-    <div id="sticky-nav"></div>
+        <h3> Meteorites are like opinions: Some are much more valuable than others!</h3>
+
+        <div id="prices">
+
+        </div>
+        <p> The 9 highest selling meteorites and their sale price, in thousands of US dollars</p>
+
+        <p> A meteorite's sale price is mostly dependent on its composition and the mass of the Rock you are selling. </p>
+        <p> The most prized rocks apparently belong to the Pallasite class. </p>
+        <div id="breakdown">
+
+        </div>
+    <h3> Fantastic Rocks and where to find them </h3>
+    <p> General guidelines for finding meteorites in a safe and legal manner </p>
+    <div id="locator">
+
+    </div>
+
+
+    <p> Tool identifying the closest high-selling meteorite to a chosen location and showing where similar meteorites were be found. </p>
+    <div id="meteor-svg"></div>
+    <div id="earth-svg"></div>
+    <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
